Fixed spacing issue with project pages

--- a/css/index.css
+++ b/css/index.css
@@ -256,6 +256,9 @@ section{
 #about{
     margin: 120px 0;
 }
+#conclusion{
+    margin: 0 0 120px 0;
+}
 
 
 @media only screen and (min-width: 601px) and (max-width: 1086px){
